# kane

./: LICENSE
.github/workflows/: pytest.yml
backend/: .gitignore  main.py  pyproject.toml
backend/database/: database.py  models.py
backend/model/: stats.py  transaction.py
backend/routers/: stats.py  transactions.py
backend/tests/: conftest.py  test_main.py  test_stats.py  test_transaction.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/pages/: Dashboard.vue  Settings.vue  Transactions.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  transactionService.ts
frontend/src/stores/: app.ts  transaction.ts
frontend/src/types/: transaction.ts
