[project]
name = "kane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-config=.coveragerc --durations=10 -vv"